# guitar-tune-chrome-extension

./: .env  README.md  manifest.json  package.json  webpack.config.js
public/: pop.html
public/Audio/Worker/: index.js
src/: pop.js
src/Audio/js/Dispatcher/: index.js
src/Audio/js/Setup/: index.js
src/Audio/rs/: Cargo.toml  NOTES_TABLE.json
src/Audio/rs/src/: lib.rs  tuner.rs  utils.rs
src/Audio/rs/src/config/: static_config.rs
src/Audio/rs/src/filter/: band_pass.rs  mod.rs
src/Base/: index.js
src/Components/: Ads.js  Footer.js  Header.js  Scale.js  Scales.js  index.js
src/Components/Buttons/: Back.js  Close.js  Hamburguer.js  LeftSwitch.js  Option.js  RightSwitch.js  Switch.js  ToggleSwitch.js  Tune.js  index.js
src/Components/Sliders/: Slider.js  index.js
src/Components/Texts/: About.js  FooterNote.js  Note.js  Title.js  Version.js  index.js
src/Pages/: About.js  App.js  Configurations.js  Detection.js  Equalizer.js  Frequency.js  Main.js  Menu.js  Tuner.js  Version.js  index.js
src/StateManager/: index.js  stateManager.js  states.js
src/css/: Button.css  Description.css  FooterNote.css  Header.css  Main.css  Slide.css  Switch.css  Title.css  ToggleSwitch.css  TuneButton.css  Tuner.css
