[package]
name = "rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
lazy_static = "1.5.0"
once_cell = "1.20.2"
pitch-detection = "0.3.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.128"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.72", features = ["console"] }
